--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pyTelegramBotAPI==4.12.0
-gspread==5.12.0
-oauth2client==4.1.3
-python-docx==1.1.0
-
+flask
+python-telegram-bot==13.15
+gspread
+oauth2client
+docx
